--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 core/
 vendor/
 
-sites/*/settings*.php
-sites/*/services*.yml
+web/sites/*/settings*.php
+web/sites/*/services*.yml
 
-sites/*/files/
-sites/*/private/
+web/sites/*/files/
+web/sites/*/private/
 
-sites/*/translations/
+web/sites/*/translations/
 
-sites/*/files/php/twig/
+web/sites/*/files/php/twig/
 
 *.backup
 *.bak
